# Email-Scraper

./: README.md  emailScraper.py  pyproject.toml
emailspider/: EmailSpider.py  check_urls.py  dedupe_url_database.py  initialize_playwright.py  look_for_emails.py  spider_pages.py
