[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Email Spider"
version = "0.1.0"
description = "An email scraping utility built with Playwright to avoid anti-bot detections."
readme = "README.md"
authors = [{ name = "Luke Lauterbach" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4",
    "patchright",
    "tqdm"
]

[project.scripts]
emailspider = "emailspider.EmailSpider:main"